# MiniCad

./: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists - Copia.txt  CMakeLists.txt
src/app/commands/: ArcCmd.cpp  ArcCmd.h  BezierCmd.cpp  BezierCmd.h  Command.h  DrawTracking.cpp  DrawTrackingTemplate.cpp  DrawTrackingTemplate.h  LineCmd.cpp  LineCmd.h
src/app/main/: App.cpp  App.h  Receiver.h  main.cpp
src/app/ui/: GeometryShapes.h  Gui.cpp  Gui.h  Ui.h
src/domain/: Data.cpp  Data.h
src/util/: CMakeLists.txt  util.cpp
